css/style.css
body {
  text-align: center;
  margin: 0;
  background-color: #F2F2F2;
}

/*height: 200px;*/
/*overflow: hidden;*/
h1 {
  padding-bottom: 70px;
  padding-top: 10px;
  font-family: 'Merriweather', serif;
}


ul {
  margin: 0 auto;
  /*padding: 0;
  width: 750px;
  height: 300px;
  border: 1px solid #000;*/
  /*border-radius: 15px;*/
  /*background-color: white;*/*/
  position: relative;
  background-image: url('http://www.merlinworld.com/RV/mahogany-wood.jpg');
  /*padding: 0;*/
  padding-top: 50px;
  width: 700px;
  border-radius: 1%;
}



.white span {
  position: absolute;
  top: 450px;
  font-weight: bold;
  margin: 0 auto;
  color: grey;
}

/*How to arrange the keys properly?*/
.white {
  background-color: white;
  list-style-type: none;
  /*border: 1px solid #000;*/
  /*box-sizing: border-box;*/
  width: 65px;
  height: 265px;
  display:inline-block;
  -webkit-box-shadow:inset 0 1px 0px #fff,inset 0 -1px 0px #fff,inset 1px 0px 0px #fff,inset -1px 0px 0px #fff,0 4px 3px rgba(0,0,0,0.7);
  -moz-box-shadow:inset 0 1px 0px #fff,inset 0 -1px 0px #fff,inset 1px 0px 0px #fff,inset -1px 0px 0px #fff,0 4px 3px rgba(0,0,0,0.7);
  box-shadow:inset 0 1px 0px #fff,inset 0 -1px 0px #fff,inset 1px 0px 0px #fff,inset -1px 0px 0px #fff,0 4px 3px rgba(0,0,0,0.7);
  -webkit-border-radius:0 0 3px 3px;
  -moz-border-radius:0 0 3px 3px;
  border-radius:0 0 3px 3px;
}

.black {
  list-style-type: none;
  /*border: 1px solid #000;*/
  /*box-sizing: padding-box;*/
  width: 30px;
  height: 160px;
  /*border-radius: 10px;*/
  /*border-bottom-left-radius: 5px;*/
  /*border-bottom-right-radius: 5px;*/
  background-color: black;
  /*z-index: 30;*/
  position: absolute;
  top: 211px;
  display: inline-block;
  padding-left: 0;


  -webkit-box-shadow: 5px 6px 20px 0px #aaa inset;
  -moz-box-shadow: 5px 6px 20px 0px #aaa inset;
  box-shadow: 5px 6px 20px 0px #aaa;
}

.selected {
  /*background: ;*/
  background-color: #fefbf7;
  -webkit-box-shadow: -2px -3px 0px 5px #E0E0E0 inset;
  -moz-box-shadow: -2px -3px 0px 5px #E0E0E0 inset;
  box-shadow: -2px -3px 0px 5px #E0E0E0 inset;
}

.Play {
  /*font-style: italic;*/
  font-family:sans-serif;
  background-position: center;
  margin-top: 60px;
  color: black;
  background-color: white;
  border-color: white;
  height: 30px;
  width: 30px;
}

.jam {
  font-family:sans-serif;
  background-position: center;
  margin-top: 60px;
  margin-left: 10px;
  color: black;
  background-color: white;
  border-color: white;
  height: 30px;
  width: 30px;
}

p {
  font-family: 'Merriweather', serif;
  font-size: 13px;
  margin-top: 60px;
  font-style: italic;
}

